@startuml

title __MEDIA's Class Diagram__\n

  namespace com.unisa.cinehub {
    namespace model.media {
      interface com.unisa.cinehub.model.media.CastRepository {
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.media {
      class com.unisa.cinehub.model.media.CastService {
          {static} - logger : Logger
          + CastService()
          + addCast()
          + mergeCast()
          + removeCast()
          + retrieveAll()
          + retrieveByKey()
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.media {
      interface com.unisa.cinehub.model.media.GenereRepository {
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.media {
      interface com.unisa.cinehub.model.media.RuoloRepository {
      }
    }
  }
  

  namespace com.unisa.cinehub {
    namespace model.media {
      class com.unisa.cinehub.model.media.RuoloService {
          {static} - logger : Logger
          + RuoloService()
          + addRuolo()
      }
    }
  }
  

  com.unisa.cinehub.model.media.CastService o-- com.unisa.cinehub.model.media.CastRepository : castRepository
  com.unisa.cinehub.model.media.CastService o-- com.unisa.cinehub.model.media.film.FilmRepository : filmRepository
  com.unisa.cinehub.model.media.CastService o-- com.unisa.cinehub.model.media.RuoloRepository : ruoloRepository
  com.unisa.cinehub.model.media.CastService o-- com.unisa.cinehub.model.media.serietv.SerieTVRepository : serieTVRepository
  com.unisa.cinehub.model.media.RuoloService o-- com.unisa.cinehub.model.media.CastRepository : castRepository
  com.unisa.cinehub.model.media.RuoloService o-- com.unisa.cinehub.model.media.film.FilmRepository : filmRepository
  com.unisa.cinehub.model.media.RuoloService o-- com.unisa.cinehub.model.media.RuoloRepository : ruoloRepository
  com.unisa.cinehub.model.media.RuoloService o-- com.unisa.cinehub.model.media.serietv.SerieTVRepository : serieTVRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
